--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -136,7 +136,22 @@
     }
 
     .aboutMe {
-        background-size: unset;
-        background-attachment: scroll;
+        background-image: unset;
+    }
+
+    body:before {
+        content: "";
+        display: block;
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -10;
+        background: url('../../images/cta01.jpg') no-repeat center center;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
     }
 }
