--- a/sass/layout/__grid.scss
+++ b/sass/layout/__grid.scss
@@ -13,6 +13,12 @@
 }
 
 @media only screen and (max-width:992px) {
+    .skills {
+        &__grid {
+            grid-template-columns: repeat(1, 1fr);
+        }
+    }
+
     @-moz-document url-prefix() {
         .skills {
 
