--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -90,12 +90,14 @@
     padding-bottom: 100px;
     @include text-center;
 
+
     &::after {
         @include bg-after;
         background-image: url('../images/bg.jpg');
         background-attachment: fixed;
         background-size: cover;
         opacity: 0.05;
+        z-index: 100000;
 
     }
 
@@ -136,18 +138,17 @@
     }
 
     .aboutMe {
-        background-image: unset;
+        // background-image: none;
+        position: relative;
     }
 
-    body:before {
+    .aboutMe::after {
         content: "";
         display: block;
         position: fixed;
         left: 0;
         top: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -10;
+        z-index: -5;
         background: url('../../images/cta01.jpg') no-repeat center center;
         -webkit-background-size: cover;
         -moz-background-size: cover;
