--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,10 @@ a:visited {
       font-size: 50px;
       margin-bottom: 30px; }
 
+@media only screen and (max-width: 1024px) {
+  .aboutMe {
+    background-image: linear-gradient(to right, rgba(142, 14, 0, 0.8), rgba(31, 28, 24, 0.8)); } }
+
 @media only screen and (max-width: 768px) {
   .contact__flex {
     flex-direction: column;
@@ -136,7 +140,7 @@ a:visited {
     .contact__box:first-of-type {
       margin-bottom: 30px; }
   .aboutMe {
-    background-image: linear-gradient(rgba(51, 51, 51, 0.9), rgba(221, 24, 24, 0.9)); } }
+    background-image: linear-gradient(to right, #8E0E00, #1F1C18); } }
 
 html,
 body {
