--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -121,6 +121,12 @@
     }
 }
 
+@media only screen and (max-width:1024px) {
+    .aboutMe {
+        background-image: linear-gradient(to right, rgba(142, 14, 0, .8), rgba(31, 28, 24, .8));
+    }
+}
+
 @media only screen and (max-width:768px) {
     .contact {
         &__flex {
@@ -138,6 +144,6 @@
     }
 
     .aboutMe {
-        background-image: linear-gradient(rgba(51, 51, 51, 0.9), rgba(221, 24, 24, 0.9));
+        background-image: linear-gradient(to right, #8E0E00, #1F1C18);
     }
 }
