--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,10 @@ a:visited {
 
 @media only screen and (max-width: 1024px) {
   .aboutMe {
-    background-image: linear-gradient(to right, rgba(142, 14, 0, 0.8), rgba(31, 28, 24, 0.8)); } }
+    background-image: linear-gradient(to right, rgba(142, 14, 0, 0.8), rgba(31, 28, 24, 0.8)); }
+  .skills,
+  .contact {
+    background-image: linear-gradient(to right, #bdc3c7, #2c3e50); } }
 
 @media only screen and (max-width: 768px) {
   .contact__flex {
