--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -125,6 +125,11 @@
     .aboutMe {
         background-image: linear-gradient(to right, rgba(142, 14, 0, .8), rgba(31, 28, 24, .8));
     }
+
+    .skills,
+    .contact {
+        background-image: linear-gradient(to right, #bdc3c7, #2c3e50);
+    }
 }
 
 @media only screen and (max-width:768px) {
