--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -107,6 +107,7 @@
         width: 40%;
         background-color: white;
         padding: 30px 20px;
+        z-index: ;
 
         i {
             color: red;
