--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -107,8 +107,7 @@
         width: 40%;
         background-color: white;
         padding: 30px 20px;
-        z-index: ;
-
+        border:1px solid black;
         i {
             color: red;
             font-size: 50px;
